<resources>
    <string name="app_name">悟空返利</string>
    <string name="agree_agreement">注册代表您已阅读并同意《悟空返利》协议</string>
    <string name="password_format">8-16位英文加数字的组合</string>
    <string name="word_search">搜索淘宝/天猫宝贝 拿悟空返利</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="other_login_warn">第三方帐号不能修改用户信息！</string>
    <string name="word_no_net">请检查网络设置</string>
    <string name="word_empty_search">请输入搜索内容</string>
    <string name="loading">加载中...</string>
    <string name="super_fan">超优汇</string>
    <string name="nine">9.9包邮</string>
    <string name="zhi_to_buy">值得买</string>
    <string name="duobao">夺宝</string>
    <string name="sign">签到</string>
    <string name="search">搜索</string>
    <string name="clear_search">清除搜索历史</string>
    <string name="word_super_search">搜返利商品/折扣好货</string>
    <string name="vip_ranking">打败%1$.2f%%的用户&#160;&#160;每月10号更新数据</string>
    <string name="jf_jiedu">积分解读</string>
    <string name="ts_gonglue">提升攻略</string>
    <string name="jf_jiedu_content">积分&#160;\n\t\t\t\tV0:0-499分\n\t\t\t\tV1:500-1999分\n\t\t\t\tV2:2000-9999分\n\t\t\t\tV3:10000-49999分\n\t\t\t\tV4:50000-249999分\n\t\t\t\tV5:250000分以上</string>
    <string name="ts_gonglue_content">积分 = 消费额度 A\%% + 充值额度 B\%% + 签到积分</string>
    <string name="duobao_zhekou_content">V0&#160;无优惠\nV1&#160;9.8折\nV2&#160;9.5折\nV3&#160;9折\nV4&#160;8.5折\nV5&#160;7折</string>
    <string name="fanli_zengzhi_content">V0&#160;+0\%%\nV1&#160;+2\%%\nV2&#160;+2.5\%%\nV3&#160;+3.8\%%\nV4&#160;+4.12\%%\nV5&#160;+18\%%</string>
    <string name="tixian_edu_content">V1&#160;日限600,月限6000\nV2&#160;日限800,月限8000\nV3&#160;日限1000,月限10000\nV4&#160;日限1500,月限15000\nV5&#160;日限2000,月限20000\n</string>
    <string name="invate_rules_1">1.邀请好友成功后，好友在悟空返利中下单累计消费>=85元(时限一年)，返利到账后您将获得20元现金奖励;若邀请5人，共可获得100元现金奖励。(好友订单不包括一元夺宝、1元购、团购、线下优惠买单等)</string>
    <string name="invate_rules_2">2.您每推荐一个好友注册，好友可以获得5元红包。5元红包开启条件:30天内通过悟空返利下任意订单，返利到账后红包开启(不包括1元购、团购、线下优惠买单等)。</string>
    <string name="invate_rules_3">3.被邀请的好友从注册日期一年内下单，邀请人可获得奖励。否则邀请奖励不再发放。</string>
    <string name="invate_rules_4">4.活动中心如果发现通过作弊手段获得奖励的，将取消奖励。新规则从2017年4月30日开始生效。</string>
    <string name="tl_good_sold_count">已抢&#160;%1$d&#160;件</string>
    <string name="good_price">¥&#160;%1$.2f</string>
    <string name="time_left">剩余&#160;%1$s&#160;:&#160;%2$s&#160;:&#160;%3$s</string>
    <string name="search_count">共%1$d件商品</string>
</resources>
